--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-server",
+  "name": "fast-node-server",
   "version": "0.0.1",
   "description": "Very minimalyste web framework",
   "main": "index.js",
@@ -17,7 +17,7 @@
     "\"Server\"",
     "\"http\"",
     "\"node-http-server\"",
-    "\"express\"",
+    "\"express\""
   ],
   "author": "Franck Dakia",
   "license": "ISC",
@@ -29,6 +29,6 @@
     "serve-favicon": "^2.3.0",
     "body-parser": "^1.13.3",
     "morgan": "^1.6.1",
-    "serve-static": "^1.10.0",
+    "serve-static": "^1.10.0"
   }
 }
