--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
     "serve-favicon": "^2.3.0",
     "body-parser": "^1.13.3",
     "serve-static": "^1.10.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.13.3",
+    "serve-favicon": "^2.3.0",
+    "serve-static": "^1.10.0"
   }
 }
