--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fast-node-server",
+  "name": "small-express",
   "version": "0.1.1",
   "description": "Very minimalyste web framework",
   "main": "index.js",
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/papac/fast-node-server#readme",
   "devDependencies": {
+    "mime": "^1.3.4"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
